2002-05-05  Chris Lyttle <chris@wilddev.net>

	* help/C/Makefile.am: updated for new format of SK 0.3.8.
	* help/C/gnotravex-C.omf: updated for new format of SK 0.3.8.
	
2002-04-15  Bastien Nocera  <hadess@hadess.net>

	* gnotravex.c: (save_state): remove nstr(), patch from
	r_kinder@yahoo.com (Richard Kinder)

2002-02-17  Chris Lyttle  <chris@wilddev.net>

	* help/C/gnotravex.xml: updated for new template.
	* help/C/Makefile.am:  added legal.xml
	* help/C/legal.xml:  added to comply with new template

2002-02-14  Chris Lyttle    <chris@wilddev.net>

	* help/C/gnotravex.xml : move to XML.

	* help/C/gnotravex-C.omf : move to XML.

	* help/C/gnotravex.sgml : deleted, move to XML.

	* help/C/Makefile.am : move to XML.

2002-02-02  Zbigniew Chyla  <cyba@gnome.pl>

	* gnotravex.c (about_cb): Don't try to translate empty string.

2002-01-20  Juan Pablo Mendoza <jpablo@gnome.org>

	Patch from Andreas Simon <yuipx@web.de>

	gnotravex.c: Remove some deprecated functions and
	reduce flickering when changuing board size.

2002-01-03  Josh Barrow  <drleary@mac.com>

	* Makefile.am:
	* gnotravex.c: (main), (create_window), (create_space):

2001-12-31  Josh Barrow  <drleary@mac.com>

	* gnotravex.c: (expose_space), (gui_draw_pixmap), (setup_mover),
	(create_space), (create_mover), (load_image), (get_bg_color),
	(make_buffer), (quit_game_cb), (nstr):
	Changed to not use deprecated functions.

2001-12-23  Mark McLoughlin  <mark@skynet.ie>

	* gnotravex.c: port from GtkClock to GamesClock.

	* Makefile.am: upd.

2001-12-19  Seth Nickell  <snickell@stanford.edu>

	* Makefile.am:
	* gnotravex.desktop:

	Install into the correct location and add a Categories
	field.
	
2001-12-04  Duarte Loreto <happyguy_pt@hotmail.com>

        * gnotravex.desktop: Added Portuguese (pt) translation.

2001-07-27  Abel Cheung  <maddog@linux.org.hk>

	* gnotravex.desktop: Added traditional Chinese translation.

2001-06-16  Juan Pablo Mendoza <pablo_juan@yahoo.com>

	* gnotravex.c: See you in hell imlib.